# quita_clave_pdf

./: LICENSE  README.md  pdf_unlocker.py  quita_clave_pdf.py  setup.cfg
.github/workflows/: python-tests.yml
tests/: test_pdf_unlocker.py
