[metadata]
name = pdf-unlocker
version = 0.1.0
description = A small utility to decrypt password-protected PDFs.
long_description = file: README.md
long_description_content_type = text/markdown
author = PDF Unlocker Contributors
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    PyPDF2>=3.0.0

[options.entry_points]
console_scripts =
    pdf-unlocker = pdf_unlocker:main
